--- a/Week 3 Part 2.ipynb
+++ b/Week 3 Part 2.ipynb
@@ -16,7 +16,11 @@
     "\n",
     "What can you infer about the relationships between (1) the women, and (2) the social events?  \n",
     "\n",
+    "Brief Description : http://vlado.fmf.uni-lj.si/pub/networks/data/ucinet/ucidata.htm#davis\n",
+    "\n",
     "Dataset: http://vlado.fmf.uni-lj.si/pub/networks/data/Ucinet/davis.dat\n",
+    "\n",
+    "Code reference: https://networkx.org/documentation/stable/auto_examples/algorithms/plot_davis_club.html\n",
     "\n",
     "\n",
     "## BACKGROUND \n",
